--- a/FrontBundle/Resources/config/routing.yml
+++ b/FrontBundle/Resources/config/routing.yml
@@ -9,3 +9,7 @@ tech_corp_front_homepage:
 tech_corp_front_about:
     path: /about
     defaults: { _controller: TechCorpFrontBundle:Static:about }
+
+tech_corp_front_user_timeline:
+    path: /timeline/{userId}
+    defaults: { _controller: TechCorpFrontBundle:Timeline:userTimeline}	
