Fin del capitulo 11

--- a/FrontBundle/Resources/config/routing.yml
+++ b/FrontBundle/Resources/config/routing.yml
@@ -12,4 +12,8 @@ tech_corp_front_about:
 
 tech_corp_front_user_timeline:
     path: /timeline/{userId}
-    defaults: { _controller: TechCorpFrontBundle:Timeline:userTimeline}	
+    defaults: { _controller: TechCorpFrontBundle:Timeline:userTimeline}
+
+tech_corp_front_friends_timeline:
+    path:  /friends_timeline/{userId}
+    defaults: { _controller: TechCorpFrontBundle:Timeline:friendsTimeline}
