--- a/FrontBundle/Resources/config/routing.yml
+++ b/FrontBundle/Resources/config/routing.yml
@@ -17,3 +17,13 @@ tech_corp_front_user_timeline:
 tech_corp_front_friends_timeline:
     path:  /friends_timeline/{userId}
     defaults: { _controller: TechCorpFrontBundle:Timeline:friendsTimeline}
+
+tech_corp_front_add_friend:
+    path: /user/add-friend/{friendId}
+    defaults: { _controller: TechCorpFrontBundle:User:addFriend }
+    requirements: { method: POST }
+
+tech_corp_front_remove_friend:
+    path: /user/remove-friend/{friendId}
+    defaults: { _controller: TechCorpFrontBundle:User:removeFriend }
+    requirements: { method: POST }
